# devine-kernel

./: .gitignore  .project-structure  BUILD_SYSTEM.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DRIVER_DEBUG_STATUS.md  EXT2_BUILD_NOTES.md  EXT2_COMPLETION_SUMMARY.md  EXT2_FINAL_STATUS.md  EXT2_QUICK_START.md  EXT2_VERIFICATION_CHECKLIST.md  IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.ext2  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_DRIVERS.md  SHELL_UX_IMPLEMENTATION.md  SMP_PROFILING_README.md  STATUS.md  TICKET_COMPLETION_SUMMARY.md  VERIFICATION_CHECKLIST.md  aarch64-devine.json  aarch64-unknown-linux-gnu.json  build.sh  build_ext2.sh  i686-unknown-linux-gnu.json  limine.cfg  x86_64-devine.json
.cargo/: config.toml
crates/devine-arch/: Cargo.toml
crates/devine-arch-aarch64/: Cargo.toml
crates/devine-arch-aarch64/src/: gic.rs  lib.rs  mmu.rs  uart.rs
crates/devine-arch-x86_64/: Cargo.toml
crates/devine-arch-x86_64/src/: gdt.rs  idt.rs  lib.rs  pic.rs  serial.rs  vga.rs
crates/devine-arch/src/: lib.rs
crates/devine-boot/: Cargo.toml
crates/devine-boot/src/: lib.rs  multiboot2.rs
crates/devine-kernel-core/: Cargo.toml
crates/devine-kernel-core/src/: console.rs  lib.rs  memory.rs  panic.rs
crates/devine-perf-cpp/: Cargo.toml  build.rs
crates/devine-perf-cpp/include/: crypto.hpp  profiler.hpp
crates/devine-perf-cpp/src/: lib.rs  profiler.cpp
crates/devine-perf-cpp/src/cpp/: crypto.cpp
docs/: BOOT_ARCHITECTURE.md  DEBUGGING.md  DRIVERS.md  DRIVER_DEVELOPMENT.md  EXT2_IMPLEMENTATION.md  QUICK_START.md  SHELL.md  SHELL_REFERENCE.md  SHELL_TERMINAL_README.md  SYSCALLS.md  USERSPACE.md
examples/: demo.md
examples/fs/: mkfs_ext2.c
include/kernel/: Assert.hpp  Kernel.hpp  Log.hpp  Registry.hpp  Subsystem.hpp
linker/: aarch64.ld  x86_64.ld
scripts/: qemu-arm64.sh  qemu-x86_64.sh  run-qemu.sh  test-runner.py
src/: hwinfo.rs  lib.rs  main.cpp  main.rs
src/arch/: interrupts.rs  ipi.rs  mod.rs  x86_64.rs
src/arch/arm64/: ap_boot.rs  cpu.rs  gic.c  mod.rs
src/arch/x86_64/: apic.c  boot.S  gdt.c  idt.c  interrupts.S  linker.ld
src/arm64/: boot.s  linker.ld  mod.rs
src/boot/: kmain.c
src/cpu/: init.rs  interrupts.c  mod.rs  percpu.rs  scheduler.c  scheduler_smp.rs
src/drivers/: device.c  devicetree.c  pci.c  serial.rs
src/drivers/block/: ramdisk.c  virtio_blk.c
src/drivers/net/: virtio_net.c
src/drivers/serial/: mod.rs  pl011.rs  uart16550.rs
src/drivers/tty/: ansi.rs  line_discipline.rs  mod.rs  pl011.c  string_utils.c  tty.rs  tty_core.c  uart16550.c
src/fs/: block_cache.c  block_device_wrapper.c  ext2_demo.c  ext2_init.c
src/fs/ext2/: alloc.c  dir.c  ext2.c  file.c  inode.c  superblock.c  vfs_integration.c
src/include/: block_cache.h  console.h  ext2.h  ext2_public.h  kernel.h  profiler.h  tty.h  types.h
src/ipc/: ipc.c
src/kernel/: Kernel.cpp  Log.cpp  Registry.cpp  debugger.c  gdbstub.c  profiler.rs
src/lib/: console.c  spinlock.rs  utils.c
src/lib/vt/: mod.rs  screen.rs  tests.rs
src/lib_core/: mod.rs  utils.c
src/lib_core/vt/: mod.rs  parser.rs  tests.rs
src/memory/: frame_allocator.rs  heap.rs  mod.rs  numa.rs
src/memory/paging/: arm_lpae.rs  mod.rs  x86_64_paging.rs
src/mm/: mm.c
src/process/: context.rs  elf_loader.rs  loader.rs  mod.rs  scheduler.rs  thread.rs
src/security/: mod.rs  security.c
src/syscall/: entry.rs  mod.rs
src/userspace/: mod.rs
src/userspace/shell/: cat.rs  date.rs  echo.rs  env.rs  grep.rs  ls.rs  mod.rs  sleep.rs  tokenizer.rs
src/vfs/: vfs.c
src/x86_64/: ap_boot.rs  ap_startup.s  boot.s  cpu.rs  gdt.rs  idt.rs  linker.ld  multiboot2.h
tests/: driver_stress.rs  qemu_syscall_smoke.sh  run_driver_stress.sh  shell_tests.rs  test_ext2.c  validate_implementation.sh
userspace/: build.sh
userspace/apps/: Makefile
userspace/apps/include/: shell.h
userspace/apps/src/: cat.c  echo.c  init.c  ls.c  pwd.c  shell.c  stress.c
userspace/libc/: Makefile
userspace/libc/include/: kuser.h  stdio.h  stdlib.h  string.h  term.h
userspace/libc/src/: crt0_arm64.S  crt0_x86_64.S  libc.c
userspace/prebuilt/arm64/: ls.elf
userspace/prebuilt/x86_64/: cat.elf  init.elf  ls.elf  shell.elf  stress.elf
