[package]
name = "devine-arch-x86_64"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
volatile = { workspace = true }
devine-arch = { path = "../devine-arch" }
devine-perf-cpp = { path = "../devine-perf-cpp" }
